# Ramanlab-Auto-Data-Analysis

./: .gitignore  .yolo_curation_cache.json  Auto_Pipeline_Runner.ipynb  CACHING.md  CLAUDE.md  Makefile  OPTIMIZATION_REPORT.md  QUICK_BACKUP_REFERENCE.txt  QUICK_START_CACHING.md  README.md  REDUNDANT_PROCESSING_ANALYSIS.md  TEST_CACHE_FIX.md  auto_label_images.py  backfill_fly_enclosure_csv.py  cache_manager.sh  cleanup_data_secured.sh  collect_eye_prob_coords.py  config.yaml  environment.yml  esphome.yaml  esphomeflynursery2_no_ntfy.yaml  filter_onnx_classes.py  filter_xanylabeling_annotations.py  generate_xanylabeling_config.py  geom_features.py  init_repo.sh  pyproject.toml  requirements.txt  run.sh  sitecustomize.py  test_manifest_standalone.py  test_pipeline_gpu_integration.py
HomeAssistant/: test_influxdb_enclosure.py
config/: example.env  example.yaml
docs/: BACKUPS_README.md  BACKUP_QUICKSTART.txt  BACKUP_SETUP.md  BACKUP_SYSTEM_CHANGES.md  BACKUP_SYSTEM_GUIDE.md  BACKUP_USAGE_GUIDE.md  BASELINE_EXAMPLES.md  CACHING.md  COMPRESSION_BACKUP_GUIDE.md  CURATION_UPDATE.md  DATA_SAFETY_SUMMARY.md  DEVELOPMENT_GUIDELINES.md  Detailed_Pipeline_Walkthrough.ipynb  FILES-CHANGED.md  GPU_ACCELERATION_GUIDE.md  GPU_OPTIMIZATION_LEVELS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  JUPYTER_PIPELINE_GUIDE.md  OPTIMIZATION.md  PSEUDOLABEL_EXPORT.md  RCLONE-SMB-IMPLEMENTATION.md  SMB-IMPLEMENTATION-CHECKLIST.md  SMB-QUICK-REFERENCE.md  SMB-RCLONE-SETUP.md  SMB-SETUP-QUICK-START.md  START-HERE.md  THRESHOLD_BASELINE_CONFIG.md  (+6 more)
(+222 files in other folders)
